--- a/interface/login.html
+++ b/interface/login.html
@@ -13,6 +13,27 @@
 	<script src="main.js"></script>
 </head>
 <body>
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="#">Footwear Web Portal</a>
+			</li>
+		</ul>
+	</nav>
+	<div class="row justify-content-center">
+		<div class="col-sm-5">
+				<div class="fw-box">
+					<h1> Login Page </h1><br>
+						<form action="/action_page.php">
+						  Login: <input type="text" name="Login"><br><br>
+					  		Password: <input type="text" name="Password"><br><br>
+						  <input type="submit" value="Submit">
+						</form>
+				</div>
+			</div>
+	</div>
+	
+
 
 </body>
 </html>
