--- a/interface/login.html
+++ b/interface/login.html
@@ -6,34 +6,41 @@
 	<title>Login</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="main.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="login.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="main.js"></script>
 </head>
-<body>
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-		<ul class="navbar-nav">
-			<li class="nav-item active">
-				<a class="nav-link" href="#">Footwear Web Portal</a>
-			</li>
-		</ul>
-	</nav>
-	<div class="row justify-content-center">
-		<div class="col-sm-5">
-				<div class="fw-box">
-					<h1> Login Page </h1><br>
-						<form action="/action_page.php">
-						  Login: <input type="text" name="Login"><br><br>
-					  		Password: <input type="text" name="Password"><br><br>
-						  <input type="submit" value="Submit">
-						</form>
+<body class="bg-light">
+	<div class="container">
+		<form class="form-signin text-center">
+			<div class="row">
+				<div class="col-md-6 border border-top-0 border-left-0 border-bottom-0 d-flex align-items-center">
+					<h1 class="display-4">Industrial Footwear Web Portal</h1>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group mb-5 ml-5 mr-5">
+						<h4 class="mb-3 font-weight-normal">Sign in to your account</h4>
+						<div class="input-group">
+							<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+							<input type="text" class="form-control" id="username" placeholder="Username" required autofocus>
+						</div>
+						<input type="password" class="form-control mb-3" id="password" placeholder="Password" required>
+						<div class="checkbox mb-3">
+							<label>
+								<input type="checkbox" value="remember-me">
+								remember me
+							</label>
+							<br>
+						</div>
+						<button class="btn btn-lg btn-primary btn-block mb-3" type="submit">Sign in</button>
+						<a href="#">Reset password</a>
+					</div>
 				</div>
 			</div>
-	</div>
-	
-
-
+		</div>
+	</form>
 </body>
 </html>
