--- a/interface/retailmanager.html
+++ b/interface/retailmanager.html
@@ -12,7 +12,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="main.js"></script>
 </head>
-<body>
+<body class="bg-light">
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
@@ -25,34 +25,46 @@
 			</li>
 		</ul>
 	</nav>
-	<div class="container">
+	<div class="container mt-5">
 		<div class="row">
 			<div class="col-sm-12 welcome-banner">
-				<h1>Retail Manager</h1>
+				<h1 class="display-2">Retail Manager</h1>
 			</div>
 		</div>
 	</div>
 	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-sm-4">
-				<div class="fw-box">
-					<p>Company Profiles</p>
-					<button type="button" class="btn btn-primary">View</button>
+		<div class="row mb-5">
+			<div class="col-md-4">
+				<div class="d-flex flex-column fw-box border">
+					<div class="fw-box-header">Company Profiles</div>
+					<ul class="list-group">
+						<li class="list-group-item list-group-item-light">View list of company profiles.</li>
+						<li class="list-group-item list-group-item-light">View company information.</li>
+						<li class="list-group-item list-group-item-light">Edit company information.</li>
+					</ul>
+					<button type="button" class="btn btn-lg btn-primary mt-auto">View</button>
 				</div>
 			</div>
-			<div class="col-sm-4">
-				<div class="fw-box">
-					<p>Inventory</p>
-					<button type="button" class="btn btn-primary">View</button>
+			<div class="col-md-4">
+				<div class="d-flex flex-column fw-box border">
+					<div class="fw-box-header">Inventory</div>
+					<ul class="list-group">
+							<li class="list-group-item list-group-item-light">View inventory.</li>
+						</ul>
+					<button type="button" class="btn btn-lg btn-primary mt-auto">View</button>
 				</div>
 			</div>
-			<div class="col-sm-4">
-				<div class="fw-box">
-					<p>Invoices</p>
-					<button type="button" class="btn btn-primary">View</button>
+			<div class="col-md-4">
+				<div class="d-flex flex-column fw-box border">
+					<div class="fw-box-header">Invoices</div>
+					<ul class="list-group">
+							<li class="list-group-item list-group-item-light">View invoices.</li>
+						</ul>
+					<button type="button" class="btn btn-lg btn-primary mt-auto">View</button>
 				</div>
 			</div>
 		</div>
+		<hr>
 	</div>
 </body>
 </html>
