--- a/src/main/webapp/retailmanager.html
+++ b/src/main/webapp/retailmanager.html
@@ -21,7 +21,7 @@
 		</ul>
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="#">Log out</a>
+				<a class="nav-link" href="index.jsp">Log out</a>
 			</li>
 		</ul>
 	</nav>
@@ -42,7 +42,7 @@
 						<li class="list-group-item list-group-item-light">View company information.</li>
 						<li class="list-group-item list-group-item-light">Edit company information.</li>
 					</ul>
-					<button type="button" class="btn btn-lg btn-primary mt-auto">View</button>
+					<button onclick="window.location.href='profiles.html'" type="button" class="btn btn-lg btn-primary mt-auto">View</button>
 				</div>
 			</div>
 			<div class="col-md-4">
