Update profile example

--- a/interface/example profile div.html
+++ b/interface/example profile div.html
@@ -3,6 +3,6 @@
 	<div class="company-profile">
 		<p class="profile-name">Company name goes here</p>
 		<p>Brief information about the company</p>
-		<button type="button" class="btn btn-prmiary">View Details</buttom>
+		<a href="company.jsp" class="btn btn-primary">View Details</buttom>
 	</div>
 </div>
